...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

    <EditText
        android:id="@+id/newTaskPopup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:layout_constraintTop_toBottomOf="@+id/addTaskTextView"
...
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskPopup_title"
        app:layout_editor_absoluteX="-28dp" />

    <Button
        android:id="@+id/newTaskPopup_select_date_button"
        style="?android:spinnerStyle"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/jan_01_2022"
        android:textColor="@color/black"
...
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskPopup_date"
        app:layout_editor_absoluteX="-28dp" />

    <Button
        android:id="@+id/newTaskPopup_select_duration_button"
        style="?android:spinnerStyle"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_15"
        android:textColor="@color/black"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newTaskPopup_duration"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintVertical_bias="0.118" />

    <Button
        android:id="@+id/newTaskPopup_saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/save"
...
