...
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="4dp"
        android:textSize="24sp"/>

    <ImageButton
        android:id="@+id/add_task_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delete_location_button"
        android:layout_marginStart="340dp"
        android:backgroundTint="@color/white"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@drawable/ic_baseline_add_circle" />

    <ToggleButton
        android:id="@+id/start_study_button"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:padding="0dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/delete_location_button"
...
