<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <CheckBox
            android:id="@+id/todoCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tool:text="Sample Task. "
            android:paddingStart="8dp"
            android:layout_marginBottom="10dp"
            android:buttonTint="@color/quantum_googgreen"/>

        <TextView
            android:id="@+id/taskDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_data"
            android:textSize="12sp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>