...
    <string name="title_activity_start_work">StartWork</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="delete_this_study_location">Delete this study location</string>
    <string name="to_do_list">To-do-list</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="add_friend">Add friend</string>
    <string name="friends">Friends</string>
    <string name="current_score">Current Score:</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="log_out">Log Out</string>
...
